example/lib/src/generated/errors/errors_localization_tl.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Tagalog (`tl`).
class ErrorsLocalizationTl extends ErrorsLocalization {
  ErrorsLocalizationTl([String locale = 'tl']) : super(locale);

  @override
  String get error => 'An error occurred';

  @override
  String get unexpectedError => 'An unexpected error occurred';

  @override
  String get bugReportSentText => 'Matagumpay naipadala ang ulat ng bug.';
}
